--- a/templates/report.html
+++ b/templates/report.html
@@ -3,7 +3,7 @@
     <title>Investigation Report</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://bootswatch.com/darkly/bootstrap.css" rel="stylesheet" media="screen">
-      <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+
 
       <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
       <script src="http://d3js.org/d3.v3.min.js"></script>
@@ -267,7 +267,7 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Memory process dump analysis<span class="label label-primary pull-right"># of processes dumped: 5</span></h3>
+                  <h3 class="panel-title">Memory process dump analysis<span class="label label-primary pull-right"># of processes dumped: {{eplist|length}}</span></h3>
                 </div>
         <div class="panel-body">
 
@@ -277,8 +277,8 @@
             <thead>
             <td><b>Process name</b></td>
             <td><b>PID</b></td>
-            <td><b>Publisher</b></td>
-
+            <td><b>Copyright</b></td>
+            <td><b>Company</b></td>
             <td><b>MD5</b></td>
             <td><b>Size</b></td>
             <td><b>Virus Scan</b></td>
@@ -286,59 +286,46 @@
             </thead>
 
 
+            {% for eprocess in eplist %}
             <tr>
-                <td>svchost.exe</td>
-                <td>3436</td>
-                <td>Microsoft Corporation</td>
-                <td>018998cae2fd48959243e872769636fa</td>
-                <td>44K</td>
+                {% if eprocess['process_name'] |length < 1 %}
+                <td>{{ eprocess['OriginalFileName'] }}</td>
+                {% else %}
+
+                <td>{{ eprocess['process_name'] }}</td>
+                {% endif %}
+
+                <td>{{ eprocess['pid'] }}</td>
+                <td>{{ eprocess['LegalCopyright'] }}</td>
+                <td>{{ eprocess['CompanyName'] }}</td>
+                <td>{{ eprocess['md5'] }}</td>
+                <td>{{ eprocess['FileSize'] }}</td>
+
                 <td><span class="label label-success">Clean</span> </td>
-                <td><span class="label label-success">0.8421</span> </td>
+
+
+                <td>
+                    {% if eprocess['sn_level'] == "level1" %}
+                    <span class="label label-success">
+                    {% endif %}
+                    {% if eprocess['sn_level'] == "level2" %}
+                    <span class="label label-warning">
+                    {% endif %}
+                    {% if eprocess['sn_level'] == "level3" %}
+                    <span class="label label-danger">
+                    {% endif %}
+
+                        {{ eprocess['sentropy'] }}</span>
+
+                </td>
 
             </tr>
-             <tr>
-                <td>sppsvc.exe</td>
-                <td>3436</td>
-                <td>Microsoft Corporation</td>
-                <td>92ea23217b5ce5e22b6272e6bbe27ba6</td>
-                <td>44K</td>
-                <td><span class="label label-success">Clean</span> </td>
-                <td><span class="label label-success">0.7313</span> </td>
 
-            </tr>
-                  <tr>
-                <td>RAVBg64.exe</td>
-                <td>3504</td>
-                <td>Microsoft Corporation</td>
 
-                <td>a3ed531ec568439a8008bbce759417df</td>
-                <td>450K</td>
-                <td><span class="label label-success">Clean</span> </td>
-                <td><span class="label label-success">0.8552</span> </td>
+            {% endfor %}
 
-            </tr>
-                  <tr>
-                <td>rundll32.exe</td>
-                <td>7688</td>
-                <td>Microsoft Corporation</td>
 
-                <td>ee068bd5d98dedfef6be3c43f8c7006f</td>
-                <td>23K</td>
-                <td><span class="label label-success">Clean</span> </td>
-                <td><span class="label label-success">0.9452</span> </td>
 
-            </tr>
-                  <tr>
-                <td>SCNotification</td>
-                <td>4436</td>
-                <td>Microsoft Corporation</td>
-
-                <td>3d99a5ac0cab0e4d8bfc94316fc15dc2</td>
-                <td>42K</td>
-                <td><span class="label label-success">Clean</span> </td>
-                <td><span class="label label-warning">1.3422</span> </td>
-
-            </tr>
             </table>
 
 
@@ -360,11 +347,42 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Empty Container<span class="label label-primary pull-right"></span></h3>
+                  <h3 class="panel-title">Process list<span class="label label-primary pull-right"></span></h3>
                 </div>
         <div class="panel-body">
 
         <div class="col-md-12">
+             <table class="table table-striped table-hover">
+            <thead>
+            <td><b>PID</b></td>
+            <td><b>Process name</b></td>
+
+            <td><b>Full name</b></td>
+
+            <td><b>PPID</b></td>
+            <td><b>PPID Name</b></td>
+            <td><b>User</b></td>
+            <td><b>Path</b></td>
+
+
+            </thead>
+
+
+             {% for process in plist %}
+
+            <tr>
+                <td>{{ process['pid'] }}</td>
+                <td>{{ process['name'] }}</td>
+                <td>{{ process['fullname'] }}</td>
+                <td>{{ process['ppid'] }}</td>
+                <td>{{ process['parent'] }}</td>
+                <td>Not Implemented</td>
+                <td>{{ process['imagepath'] }}</td>
+            </tr>
+
+             {% endfor %}
+
+            </table>
 
 
         </div>
@@ -376,6 +394,66 @@
 
 <!-- END Empty container for new sections :) -->
 
+    <div class="row">
+        <div class="container">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">
+                  <h3 class="panel-title">Suspicious processes<span class="label label-primary pull-right"></span></h3>
+                </div>
+        <div class="panel-body">
+
+        <div class="col-md-12">
+             <table class="table table-striped table-hover">
+            <thead>
+            <td><b>PID</b></td>
+            <td><b>Process name</b></td>
+
+            <td><b>Level</b></td>
+
+            </thead>
+
+
+             {% for sprocess in suspicious_plist %}
+
+            <tr>
+                <td>{{ sprocess['pid'] }}</td>
+                <td>{{ sprocess['name'] }}</td>
+
+                {% if sprocess['risk'] == 1 %}
+                <td><span class="label label-success">
+                    {{ sprocess['risk'] }}
+                    </span>
+                </td>
+                {% endif %}
+
+                {% if sprocess['risk'] == 2 %}
+                <td><span class="label label-warning">
+                    {{ sprocess['risk'] }}
+                    </span>
+                </td>
+                {% endif %}
+
+                {% if sprocess['risk'] == 3 %}
+                <td><span class="label label-danger">
+                    {{ sprocess['risk'] }}
+                    </span>
+                </td>
+                {% endif %}
+
+            </tr>
+
+             {% endfor %}
+
+            </table>
+
+
+        </div>
+
+            </div>
+            </div>
+        </div>
+  </div>
 
 
 
@@ -384,7 +462,7 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Hidden or injected code/DLLs<span class="label label-warning pull-right">Highly Suspicious: 3</span></h3>
+                  <h3 class="panel-title">Hidden or injected code/DLLs<span class="label label-warning pull-right">Suspicious: {{malprocesses|length}}</span></h3>
                 </div>
         <div class="panel-body">
 
@@ -394,51 +472,42 @@
             <thead>
             <td><b>Process name</b></td>
             <td><b>PID</b></td>
-            <td><b>MD5</b></td>
-            <td><b>Publisher</b></td>
+
 
             <td><b>MZ Header</b></td>
-            <td><b>Trampoline</b></td>
+            <td><b>Trampoline (ML)</b></td>
 
-            <td><b>Entropy</b></td>
+            <td><b>ASM Entropy</b></td>
             </thead>
 
+            {% for malp in malprocesses %}
 
             <tr>
-                <td>svchost.exe</td>
-                <td>3436</td>
-                <td>92ea23217b5ce5e22b6272e6bbe27ba6</td>
+                <td>{{ malp['name'] }}</td>
+                <td>{{ malp['pid'] }}</td>
 
-                <td>Microsoft Corporation</td>
+                <td>
+                {%  if malp['mz'] %}
+
+                    <span class="glyphicon glyphicon-ok"></span>
+
+                {% else %}
+                    <span class="glyphicon glyphicon-remove"></span>
+
+                {% endif %}
+                </td>
+                <td>Not implemented</td>
+                <td><span class="label label-primary">{{ malp['entropy']}}</span> </td>
+
+<!--
                 <td><span class="glyphicon glyphicon-ok"></span></td>
                 <td><span class="glyphicon glyphicon-remove"></span></td>
                 <td><span class="label label-success">1.3422</span> </td>
-
+                -->
             </tr>
+            {% endfor %}
 
-             <tr>
-                <td>svchost.exe</td>
-                <td>3504</td>
-                <td>a3ed531ec568439a8008bbce759417df</td>
 
-                <td>Microsoft Corporation</td>
-                <td><span class="glyphicon glyphicon-ok"></span></td>
-                <td><span class="glyphicon glyphicon-remove"></span></td>
-                <td><span class="label label-success">1.3422</span> </td>
-
-            </tr>
-
-               <tr>
-                <td>svchost.exe</td>
-                <td>3504</td>
-                <td>3d99a5ac0cab0e4d8bfc94316fc15dc2</td>
-
-                <td>Microsoft Corporation</td>
-                <td><span class="glyphicon glyphicon-remove"></span></td>
-                <td><span class="glyphicon glyphicon-ok"></span></td>
-                <td><span class="label label-warning">0.3422</span> </td>
-
-            </tr>
 
 
             </table>
@@ -453,74 +522,58 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Network connections<span class="label label-warning pull-right">OSINT Results: 1</span></h3>
+                  <h3 class="panel-title">Network connections<span class="label label-warning pull-right">Net Results: {{network_info|length}}</span></h3>
                 </div>
         <div class="panel-body">
 
+             <div class="panel-body">
+        <div class="col-md-12">
+            <img src="netgraph.png" class="img-responsive" >
+        </div>
+
         <div class="col-md-12">
 
-             <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover">
             <thead>
-            <td><b>Process name</b></td>
             <td><b>PID</b></td>
-            <td><b>Proto</b></td>
+            <td><b>Name</b></td>
             <td><b>Address type</b></td>
+            <td><b>Proto</b></td>
             <td><b>Remote address</b></td>
 
             <td><b>GeoIP</b></td>
             <td><b>OSINT</b></td>
 
-
             </thead>
 
+            {% for network_entry in network_info %}
+
 
             <tr>
-                <td>System</td>
-                <td>4</td>
-                <td>TCPv4</td>
-                <td><span class="glyphicon glyphicon-globe"></span></td>
-                <td>24.107.123.7</td>
-                <td>UK</td>
+                <td>{{ network_entry['pid'] }}</td>
+                <td>{{ network_entry['name'] }}</td>
 
-                <td>
+                    {% if network_entry['address_type'] == "PUBLIC" %}
+                    <td><span class="glyphicon glyphicon-globe"></span></td>
+                    {% else %}
+                    <td><span class="glyphicon glyphicon-record"></span></td>
+                    {% endif %}
+
+
+                <td>Not implemented</td>
+                <td>{{ network_entry['ip_address'] }}</td>
+                <td>Not implemented</td>
+                <td>Not implemented</td>
+                <!--<td>
+                    <span class="label label-primary"><b>OSINT</b>
                     <span class="label label-danger"><b>OSINT</b>
                     <span class="glyphicon glyphicon-fire"></span></span>
-                </td>
-
-
-            </tr>
-
-            <tr>
-                <td>spoolsv.exe</td>
-                <td>1612</td>
-                <td>TCPv4</td>
-                <td><span class="glyphicon glyphicon-globe"></span></td>
-                <td>10.32.4.40</td>
-                <td>UK</td>
-
-                <td>
-                    <span class="label label-primary"><b>OSINT</b>
-                    <span class="glyphicon glyphicon-fire"></span></span>
-                </td>
-
+                </td> -->
 
             </tr>
-
-             <tr>
-                <td>svchost.exe</td>
-                <td>1168</td>
-                <td>TCPv4</td>
-                <td><span class="glyphicon glyphicon-record"></span></td>
-                <td>192.221.78.125</td>
-                 <td>-</td>
-
-                <td>
-                    <span class="label label-primary"><b>OSINT</b>
-                    <span class="glyphicon glyphicon-fire"></span></span>
-                </td>
+            {% endfor %}
 
 
-            </tr>
 
 
             </table>
