--- a/templates/report.html
+++ b/templates/report.html
@@ -9,6 +9,9 @@
       <script src="http://d3js.org/d3.v3.min.js"></script>
 
 
+    <link rel="stylesheet" type="text/css" href="../templates/tableCustom.css">
+    <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.15/js/jquery.dataTables.js"></script>
+
       <script type="text/javascript" src="../templates/irfunctions.js"></script>
 
       <!-- Latest compiled and minified CSS -->
@@ -260,6 +263,35 @@
         </div>
 
 
+    <div class="row">
+        <div class="container">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">
+                  <h3 class="panel-title">Commands
+                      {% if cmd_info|length > 0 %}
+                      <span class="label label-danger pull-right">Commands run: {{cmd_info|length}}</span>
+                      {% endif %}
+
+                  </h3>
+                </div>
+        <div class="panel-body">
+
+        <div class="col-md-12">
+            {% for cmd in cmd_info %}
+            <pre>CMD> {{ cmd['Command'] }}</pre>
+            {% endfor %}
+
+
+        </div>
+
+
+
+
+            </div>
+            </div>
+        </div>
+        </div>
 
     <div class="row">
         <div class="container">
@@ -272,7 +304,8 @@
 
         <div class="col-md-12">
 
-             <table class="table table-striped table-hover">
+
+                 <table id="myTable" class="display">
             <thead>
             <td><b>Process name</b></td>
             <td><b>PID</b></td>
