--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Investigation Report</title>
+    <title>Analysis Report</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://bootswatch.com/darkly/bootstrap.css" rel="stylesheet" media="screen">
 
@@ -68,11 +68,10 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Investigation Report</a>
+            <a class="navbar-brand" href="#">Analysis Report</a>
           </div>
 
     </nav>
-
 
 
     <div class="row">
@@ -80,8 +79,39 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Image name
-                      <span class="label label-default">{{ image_info['image_name'] }}</span></h3>
+                  <h3 class="panel-title">Errors</h3>
+                </div>
+        <div class="panel-body">
+
+        <div class="col-md-6">
+
+            <table class="table table-striped table-hover">
+            <thead></thead>
+            {% for error in errors %}
+               {% if error|length >0 %}
+                <tr>
+
+                    <td> {{error}} </td>
+                </tr>
+                {% endif %}
+            {% endfor %}
+
+
+            </table>
+
+
+        </div>
+        </div>
+                </div>
+            </div>
+
+    <div class="row">
+        <div class="container">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">
+                  <h3 class="panel-title">Image information
+                      <span class="label label-default">[{{ image_info['image_name'] }}]</span></h3>
                 </div>
         <div class="panel-body">
 
@@ -93,6 +123,10 @@
             <tr>
                 <td>Suggested Profiles</td>
                 <td> {{profiles}} </td>
+            </tr>
+            <tr>
+                <td>Selected Profile</td>
+                <td> {{working_profile}} </td>
             </tr>
             <tr>
                 <td>KDBG</td>
@@ -107,8 +141,16 @@
                 <td>{{image_info['Image date and time']}}</td>
             </tr>
             <tr>
+                <td>Analysis date and time</td>
+                <td>{{analysis_timestamp}}</td>
+            </tr>
+            <tr>
                 <td>MD5</td>
                 <td>{{image_md5}}</td>
+            </tr>
+            <tr>
+                <td>SHA1</td>
+                <td>{{image_sha1}}</td>
             </tr>
 
             </table>
@@ -192,6 +234,101 @@
                 <td>{{ user['Account Type'] }}</td>
 
             </tr>
+             {% endfor %}
+
+
+
+            </table>
+
+
+        </div>
+
+            </div>
+            </div>
+        </div>
+        </div>
+
+
+    <div class="row">
+        <div class="container">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">
+                  <h3 class="panel-title">Process Risk index</h3>
+                </div>
+        <div class="panel-body">
+
+        <div class="col-md-12">
+
+            <table class="table table-striped table-hover">
+            <thead>
+
+            <td><b>PID</b></td>
+            <td><b>Name</b></td>
+            <td><b>MD5</b></td>
+            <td><b>VirusTotal</b></td>
+            <td><b>Process evaluation</b></td>
+
+            </thead>
+
+            {% for entry in risk_index %}
+                   <tr>
+                        <td>{{ entry['pid'] }}</td>
+                        <td>{{ entry['name'] }}</td>
+                       {% if entry['vt_code'] == 1 %}
+                       <td><a href="{{ entry['permalink'] }}">{{ entry['md5'] }}</a></td>
+                        <td><span class="glyphicon glyphicon-fire">
+                            {{ entry['positives'] }}/{{ entry['total'] }}
+                        </span></td>
+                       {% else %}
+                       <td>{{ entry['md5'] }}</td>
+                        <td><span class="glyphicon glyphicon-ban-circle">
+                            0/0
+                        </span></td>
+                       {% endif %}
+
+
+                        <td>
+                            <div class="progress">
+
+                    {% if entry['risk_index'] == 1 %}
+
+                              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="10"
+                              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                RISK INDEX {{ entry['risk_index'] }}
+                    {% endif %}
+
+                    {% if entry['risk_index'] == 2 %}
+
+                              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20"
+                              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                RISK INDEX {{ entry['risk_index'] }}
+                    {% endif %}
+
+                    {% if entry['risk_index'] == 3 %}
+
+                              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="40"
+                              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                RISK INDEX {{ entry['risk_index'] }}
+                    {% endif %}
+
+                    {% if entry['risk_index'] > 3 %}
+
+                              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
+                              aria-valuemin="0" aria-valuemax="100" style="width:100%">
+                                RISK INDEX {{ entry['risk_index'] }}
+                    {% endif %}
+
+
+                              </div>
+
+                            </div>
+                        </td>
+
+                    </tr>
+
+
+
              {% endfor %}
 
 
@@ -305,11 +442,10 @@
         <div class="col-md-12">
 
 
-                 <table id="myTable" class="display">
+            <table id="processDumpTable" class="display">
             <thead>
             <td><b>Process name</b></td>
             <td><b>PID</b></td>
-            <td><b>Copyright</b></td>
             <td><b>Company</b></td>
             <td><b>MD5</b></td>
             <td><b>Size</b></td>
@@ -328,12 +464,11 @@
                 {% endif %}
 
                 <td>{{ eprocess['pid'] }}</td>
-                <td>{{ eprocess['LegalCopyright'] }}</td>
                 <td>{{ eprocess['CompanyName'] }}</td>
                 <td>{{ eprocess['md5'] }}</td>
                 <td>{{ eprocess['FileSize'] }}</td>
 
-                <td><span class="label label-success">Clean</span> </td>
+                <td><span class="label label-success">Not implemented</span> </td>
 
 
                 <td>
@@ -384,7 +519,8 @@
         <div class="panel-body">
 
         <div class="col-md-12">
-             <table class="table table-striped table-hover">
+            <table id="processTable" class="display">
+
             <thead>
             <td><b>PID</b></td>
             <td><b>Process name</b></td>
@@ -507,7 +643,10 @@
 
 
             <td><b>MZ Header</b></td>
+            <td><b>HollowFind</b></td>
             <td><b>Trampoline (ML)</b></td>
+
+
 
             <td><b>ASM Entropy</b></td>
             </thead>
@@ -528,6 +667,18 @@
 
                 {% endif %}
                 </td>
+                {%  if malp['hollow'] %}
+                    <td><span class="label label-danger">
+                        <span class="glyphicon glyphicon-record"></span>
+                    </span>
+                    </td>
+
+                {% else %}
+                <td>
+                    <span class="glyphicon glyphicon-record"></span>
+                </td>
+                {% endif %}
+
                 <td>Not implemented</td>
                 <td><span class="label label-primary">{{ malp['entropy']}}</span> </td>
 
@@ -619,7 +770,7 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Process Tree<span class="label label-warning pull-right">Suspicious processes: 1</span></h3>
+                  <h3 class="panel-title">Process Tree [Not Implemented]<span class="label label-warning pull-right">Processes:</span></h3>
                 </div>
         <div class="panel-body">
 
@@ -640,7 +791,7 @@
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
-                  <h3 class="panel-title">Process Tree<span class="label label-warning pull-right">Suspicious processes: 1</span></h3>
+                  <h3 class="panel-title">Future Placeholder<span class="label label-warning pull-right">Data</span></h3>
                 </div>
         <div class="panel-body">
 
