Update broken CSS

--- a/templates/report.html
+++ b/templates/report.html
@@ -2,7 +2,7 @@
   <head>
     <title>Analysis Report</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://bootswatch.com/darkly/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet" media="screen">
 
 
       <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
